# sap_datavault_dbt

./: .gitignore  README.md  dbt_roles.sql  main.py  pyproject.toml
sales_example/: dbt_project.yml  generate_seed_data.py
sales_example/analyses/: count_records.sql  test_coverage_report.sql
sales_example/docs/: ENHANCEMENT_USER_STORIES.md
sales_example/macros/: business_key.sql  hash.sql  load_date.sql  staging_clean.sql  test_data_vault_compliance.sql  test_macros.sql  vault_macros.sql
sales_example/models/business_vault/: _record_counts.sql  bridge_sales.sql  bv_sat_sap_customer_kna1.sql  bv_sat_sap_material_mara.sql  bv_sat_sap_order_header_vbak.sql  bv_sat_sap_order_item_vbap.sql  pit_customer_daily.sql  schema.yml
sales_example/models/raw_vault/hub/: hub_customer.sql  hub_material.sql  hub_order.sql  hub_order_item.sql  schema.yml
sales_example/models/raw_vault/link/: link_order_customer.sql  link_order_item.sql  link_order_material.sql  schema.yml
sales_example/models/raw_vault/satellite/: sat_sap_customer_kna1.sql  sat_sap_material_mara.sql  sat_sap_order_header_vbak.sql  (+2 more)
sales_example/scripts/: check_coverage.ps1  check_coverage.sh
sales_example/seeds/: seed_sap_kna1.csv  seed_sap_mara.csv  seed_sap_vbak.csv  seed_sap_vbap.csv  seed_sap_vbpa.csv
sales_example/tests/: test_bridge_data_completeness.sql  test_business_vault_is_current.sql  test_data_vault_insert_only.sql  test_hash_key_consistency.sql  test_link_referential_integrity.sql  test_pit_date_coverage.sql  test_satellite_load_date_ordering.sql  test_satellite_referential_integrity.sql
(+7 files in other folders)
