[project]
name = "sap_datavault_dbt"
version = "0.1.0"
description = "SAP to Snowflake Data Vault demo with dbt"
requires-python = ">=3.12"

dependencies = [
    "dbt-core>=1.10.15",
    "dbt-coverage>=0.4.1",
    "dbt-snowflake>=1.8.0"
]


[tool.uv]
dev-dependencies = [
    "pandas",
    "faker"
]
